# blog

./: .env  .gitignore  Cargo.toml  Config.toml  README.md  Rocket.toml  flake.nix
.github/workflows/: deploy.yml
assets/: markdown_flowchart.excalidraw.md
blog/: .ignore  index.md
blog/assets/js/: foo.js  package-lock.json  package.json  search.js
blog/assets/styles/: base.scss  fonts.scss  home.scss  post.scss  series.scss
blog/assets/styles/baz/: foo.scss
blog/assets/styles/themes/: latte.scss
blog/content/: 404.md  500.md  about.md  index.md  search.md
blog/content/posts/: Notes-On-TaPL.md  another.md  anotheranotherone.md  anotherone.md  blash.md  fastapi-logging-with-structlog.md  hello-blog.md  hello-world.md  improving_on_ssg.md  index.md  on-linux.md  switching-to-nixos.md
blog/content/series/: index.md
blog/content/series/adventofcode2024/: index.md  part1.md  part2.md
blog/content/series/bar/: barfirst.md  index.md
blog/content/series/foo/: first.md  foo-bar.md  index.md  second.md
blog/content/series/plunges/: index.md
blog/content/series/rfkuangreading/: babel-1.md  babel-2.md  babel-3.md  babel-4.md  babel-5.md  babel-6.md  index.md  yellowface-1.md  yellowface-2.md  yellowface-3.md  yellowface-4.md  yellowface-5.md  yellowface-6.md
blog/posts/: hello-world.md
blog/posts/foo/: foo-bar.md
blog/sass/: base.scss  home.scss  post.scss  series.scss
blog/templates/: 404.html.tera  500.html.tera  atom.xml.tera  base.html.tera  home.html.tera  index.html.tera  post.html.tera  post_index.html.tera  search.html.tera  series.html.tera  series_index.html.tera  sitemap.xml.tera
blog/templates/shortcodes/: note.html.tera
cli/: Cargo.toml  test.md
cli/src/: main.rs
contents/: A New Site.md  aboo.md  blah.md  foo.md  gasp.md  hello-world.md  hello_world.md  index.md  test.md  testnew.md
contents/bar/: baz.md  index.md
crates/assets/: Cargo.toml
crates/assets/src/: esbuild.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/content/: Cargo.toml
crates/content/src/: lib.rs  page.rs  post.rs  series.rs  series_index.rs
crates/entry/: Cargo.toml
crates/entry/src/: filesystem.rs  lib.rs  summary.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs  summary.rs
crates/sass/: Cargo.toml
crates/sass/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/site/: Cargo.toml
crates/site/src/: asset.rs  config.rs  context.rs  embed_fonts.rs  entry.rs  esbuild.rs  incremental_index.rs  index.rs  lib.rs  output.rs  page.rs  shortcodes.rs  sql.rs  static_file.rs  tera_functions.rs
crates/site/src/asset/: embed_fonts.rs  esbuild.rs  mod.rs
crates/sql/: Cargo.toml
crates/sql/src/: lib.rs
crates/static_assets/: Cargo.toml
crates/static_assets/src/: lib.rs
crates/static_files/: Cargo.toml
crates/static_files/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs
crates/yar/: Cargo.toml
crates/yar/src/: main.rs  server.rs
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/lib/: DashboardSidebar.svelte  Nav.svelte  Sidebar.svelte  stores.ts  types.ts  variables.ts
frontend/src/routes/: __error.svelte  __layout.svelte  all_posts.svelte  index.svelte  login.svelte  playlists.svelte
frontend/src/routes/posts/: [post].svelte
frontend/src/routes/search/: [title].svelte
frontend/src/styles/: colors.styl  dashboard.styl  error.styl  feed.styl  fonts.styl  icons.styl  login.styl  nav.styl  post.styl  search.styl  sidebar.styl  style.styl  tailwind.css
migrations/2021-12-10-203737_posts/: down.sql  up.sql
migrations/2022-08-04-005352_create_posts/: up.sql
migrations/2022-08-05-002156_add_tags/: down.sql  up.sql
public/: A New Site.html  Hello World.html  aboo.html  bar.html  blahs.html  foo.html  index.html  test.html
sass/: base.scss  catpuccin_index.scss  catpuccin_post.scss  errors.scss  fonts.scss  index.scss  latte.scss  post.scss  post_list.scss  posts.scss  postsview.scss
scripts/: .pdm.toml  embed_fonts.py  process_svg.py  pyproject.toml
server/: Cargo.toml  Rocket.toml
server/src/: connection.rs  endpoints.rs  main.rs  post.rs  templates.rs
site/_assets/styles/: about.scss  archive.scss  base.scss  fonts.scss  home.scss  page.scss  theme.scss
site/_assets/styles/themes/: solarized.scss
site/_content/: about.html  archive.html  index.md  projects.html
site/_content/posts/: fastapi-logging-with-structlog.md  notes-on-tapl.md  switching-to-nixos.md  writing-a-static-site-generator.md
site/_content/posts/_adventofcode2024/: aoc24d1.md  aoc24d2.md
site/contents/: hello-world.md
site/sass/: base.scss
site/static/: site.webmanifest
site/templates/: base.html  home.html  page.html  sidenote.html
src/: auth.rs  catchers.rs  cors.rs  errors.rs  lib.rs  main.rs  markdown.rs  response.rs  schema.rs
src/crud/: posts.rs  users.rs
src/endpoints/: health_check.rs  mod.rs  posts.rs  users.rs
src/models/: post.rs  posts.rs  user.rs
src/util/: markdown.rs  mod.rs  response.rs
ssg/: .env  Cargo.toml  blog.db
ssg/contents/: hello_world.md  post8.md
ssg/migrations/2022-09-12-224437_create_posts/: up.sql
ssg/public/: Hello World.html  hello world.html
ssg/sass/: fonts.scss  post.scss
ssg/src/: assets.rs  build.rs  entry.rs  index.rs  lib.rs  main.rs  markdown.rs  models.rs  post.rs  schema.rs  search.rs  series.rs  sql.rs  stylesheet.rs  stylesheets.rs  utils.rs
ssg/styles/: fonts.css  post.css
ssg/templates/: base.html  page.html  post.html
styles/: base.css  catpuccin_index.css  catpuccin_post.css  errors.css  fonts.css  post.css  posts.css  postsview.css
templates/: base.html  base.html.tera  index.html  index.html.tera  post.html  post.html.tera  posts.html  posts.html.tera  series.html.tera  series_index.html.tera
tests/: health_check.rs
themes/: Catpuccin-latte.tmTheme  base16-onedark.tmTheme
