[package]
name = "yar"
version = "0.1.0"
description = "Static site generator written in Rust"
readme = "README.md"
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true

clap = { version = "4.5.9", features = ["derive"] }
tempfile = "3.10.1"

site = { path = "crates/site" }
server = { path = "crates/server" }
serde = { version = "1.0.204", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
tracing-appender = "0.2.3"
notify = "6.1.1"
tokio = "1.39.1"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
color-eyre = "0.6.3"

[workspace.package]
repository = "https://github.com/AbooMinister25/blog"
edition = "2021"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
must_use_candidate = "allow"
missing-const-for-fn = "allow"

[lints]
workspace = true

[profile.release]
debug = true
