[project]
name = ""
version = ""
description = ""
authors = [
    {name = "AbooMinister25", email = "aboominister@gmail.com"},
]
dependencies = [
    "requests>=2.28.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
format = [
    "black>=22.8.0",
    "isort>=5.10.1",
]
