[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
tera = "1"
lol_html = "0.3.1"
serde_json = "1.0.87"
chrono = "0.4.22"
color-eyre = "0.6.2"
serde = { version = "1.0.147", features = ["derive"] }

