[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
syntect = { version = "4.6.0", default-features = false, features = [
    "default-fancy",
] }
tracing = "0.1"
tera = "1"
color-eyre = "0.6.2"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
tracing-subscriber = "0.3.15"
ignore = "0.4.18"
seahash = "4.1.0"
rayon = "1.5.3"
lazy_static = "1.4.0"
toml = "0.5.9"
comrak = "0.14.0"
rsass = "0.25.2"
lol_html = "0.3.1"
