[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
tera = "1.17.1"
