[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
tera = "1.17.1"
seahash = "4.1.0"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.15.0"
toml = "0.5.10"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "5.0", default-features = false, features = [
    "default-fancy",
] }
ignore = "0.4.18"
rsass = "0.26.0"
tracing-appender = "0.2.2"
lol_html = "0.3.2"
