[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
site = { path = "../site" }
entry = { path = "../entry" }
sql = { path = "../sql" }
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tera = "1.18.0"
notify = "6.0.0"
