[package]
name = "content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
entry = { path = "../entry" }
markdown = { path = "../markdown" }
sql = { path = "../sql" }
rusqlite = "0.28.0"
tera = "1.17.1"
tracing = "0.1.37"
seahash = "4.1.0"
