[package]
name = "content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = { path = "../markdown" }
utils = { path = "../utils" }
entry = { path = "../entry" }

color-eyre = "0.6.2"
seahash = "4.1.0"
tracing = "0.1.37"
tera = "1.19.1"
serde = { version = "1.0.197", features = ["derive"] }
