[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
color-eyre = "0.6.2"
toml = "0.7.2"
tracing = "0.1.37"
syntect = { version = "5.0", default-features = false, features = [
    "default-fancy",
] }
comrak = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
