[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
comrak = "0.18.0"
lol_html = "1.2.0"
serde = { version = "1.0.188", features = ["derive"] }
syntect = { version = "5.1.0", default-features = false, features = [
    "default-fancy",
] }
toml = "0.8.0"
tracing = "0.1.37"
