[package]
name = "server"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
hyper = { version = "1.4.1", features = ["full"] }
hyper-staticfile = "0.10.1"
hyper-util = { version = "0.1.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-livereload = "0.9.3"

[lints]
workspace = true
