[package]
name = "site"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true

serde = { version = "1.0.204", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
tera = "1.20.0"

markdown = { path = "../markdown" }

[lints]
workspace = true
