[package]
name = "site"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true

serde = { version = "1.0.204", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
tera = "1.20.0"

markdown = { path = "../markdown" }
rusqlite = { version = "0.31.0", features = ["chrono", "array", "bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
ignore = "0.4.22"
seahash = "4.1.0"
tempfile = "3.10.1"
rsass = "0.28.10"
esbuild-rs = "0.13.8"
async-std = "1.12.0"
xmltree = "0.10.3"
lazy_static = "1.5.0"
base64 = "0.22.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde_json = "1.0.120"
minify-html = "0.15.0"

[lints]
workspace = true
