[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entry = { path = "../entry" }
chrono = { version = "0.4.23", features = ["serde"] }
color-eyre = "0.6.2"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.164", features = ["derive"] }
tracing = "0.1.37"
