[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
color-eyre = "0.6.2"
rusqlite = { version = "0.31.0", features = ["chrono", "array", "bundled"] }
tracing = "0.1.37"
serde_json = "1.0"