[package]
name = "static_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
entry = { path = "../entry" }
sql = { path = "../sql" }
rusqlite = "0.28.0"
seahash = "4.1.0"
tera = "1.18.0"
tracing = "0.1.37"
