[package]
name = "static_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
entry = { path = "../entry" }

color-eyre = "0.6.2"
tracing = "0.1.37"
regex = "1.10.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
base64 = "0.21.6"
xmltree = "0.10.3"
