[package]
name = "yar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
site = { path = "../site" }
sql = { path = "../sql" }
utils = { path = "../utils" }

clap = { version = "4.4.2", features = ["derive"] }
color-eyre = "0.6.2"
notify = "6.1.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
